Potentially fixed overlapping

--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
 
 #quote_chapter {
   font-weight: bold;
-  position: relative;
   margin-left: auto;
   margin-right: auto;
   left: 0;
